--- a/notebooks/traffic.ipynb
+++ b/notebooks/traffic.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmaps = googlemaps.Client(key='AIzaSyBIxOiI2KgCX70v9Q-tuD9_JFlH372hxX8')"
+    "gmaps = googlemaps.Client(key='GOOGLE_API_KEY')"
    ]
   },
   {
