Fixed issues in a few facilities dataframes (datatype, lat-long order)

--- a/notebooks/facilities.ipynb
+++ b/notebooks/facilities.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 308,
    "id": "b7226f1e-17cc-4396-8b8e-8827eba7925b",
    "metadata": {},
    "outputs": [],
@@ -206,10 +206,10 @@
     "\n",
     "    for row in range(dataframe.shape[0]):\n",
     "        #latitude\n",
-    "        latitude.append(dataframe.the_geom[row]['coordinates'][0])\n",
-    "    \n",
+    "        latitude.append(dataframe.the_geom[row]['coordinates'][1])\n",
+    "        \n",
     "        #longitude\n",
-    "        longitude.append(dataframe.the_geom[row]['coordinates'][1])\n",
+    "        longitude.append(dataframe.the_geom[row]['coordinates'][0])\n",
     "\n",
     "    dataframe['latitude'] = latitude\n",
     "    dataframe['longitude'] = longitude\n",
@@ -223,6 +223,7 @@
    "cell_type": "markdown",
    "id": "024cb881-8a37-40b4-8a3a-9092fd68cf02",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 276,
    "id": "15a4e781-caed-4827-9ceb-82d046998667",
    "metadata": {},
    "outputs": [],
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 277,
    "id": "8a0bec89-4224-42db-affa-84d7c5e59583",
    "metadata": {},
    "outputs": [
@@ -281,62 +282,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
        "      <th>all_counted_units</th>\n",
        "      <th>total_units</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>40.844171</td>\n",
-       "      <td>-73.892197</td>\n",
        "      <td>9</td>\n",
        "      <td>28</td>\n",
+       "      <td>40.844171</td>\n",
+       "      <td>-73.892197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>40.648856</td>\n",
-       "      <td>-73.964536</td>\n",
        "      <td>15</td>\n",
        "      <td>48</td>\n",
+       "      <td>40.648856</td>\n",
+       "      <td>-73.964536</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>40.690236</td>\n",
-       "      <td>-73.928624</td>\n",
        "      <td>3</td>\n",
        "      <td>10</td>\n",
+       "      <td>40.690236</td>\n",
+       "      <td>-73.928624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>40.690252</td>\n",
-       "      <td>-73.928495</td>\n",
        "      <td>3</td>\n",
        "      <td>10</td>\n",
+       "      <td>40.690252</td>\n",
+       "      <td>-73.928495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>40.653856</td>\n",
-       "      <td>-73.954709</td>\n",
        "      <td>5</td>\n",
        "      <td>16</td>\n",
+       "      <td>40.653856</td>\n",
+       "      <td>-73.954709</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    latitude   longitude all_counted_units total_units\n",
-       "0  40.844171  -73.892197                 9          28\n",
-       "1  40.648856  -73.964536                15          48\n",
-       "2  40.690236  -73.928624                 3          10\n",
-       "3  40.690252  -73.928495                 3          10\n",
-       "4  40.653856  -73.954709                 5          16"
+       "  all_counted_units total_units   latitude   longitude\n",
+       "0                 9          28  40.844171  -73.892197\n",
+       "1                15          48  40.648856  -73.964536\n",
+       "2                 3          10  40.690236  -73.928624\n",
+       "3                 3          10  40.690252  -73.928495\n",
+       "4                 5          16  40.653856  -73.954709"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 309,
    "id": "795bdee9-a049-414b-8ca8-01c4844b8e26",
    "metadata": {},
    "outputs": [
@@ -510,28 +511,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-73.953531</td>\n",
        "      <td>40.802980</td>\n",
+       "      <td>-73.953531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-73.934848</td>\n",
        "      <td>40.803018</td>\n",
+       "      <td>-73.934848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-73.977363</td>\n",
        "      <td>40.760807</td>\n",
+       "      <td>-73.977363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-73.969382</td>\n",
        "      <td>40.762186</td>\n",
+       "      <td>-73.969382</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-73.959550</td>\n",
        "      <td>40.764915</td>\n",
+       "      <td>-73.959550</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -539,14 +540,14 @@
       ],
       "text/plain": [
        "    latitude  longitude\n",
-       "0 -73.953531  40.802980\n",
-       "1 -73.934848  40.803018\n",
-       "2 -73.977363  40.760807\n",
-       "3 -73.969382  40.762186\n",
-       "4 -73.959550  40.764915"
+       "0  40.802980 -73.953531\n",
+       "1  40.803018 -73.934848\n",
+       "2  40.760807 -73.977363\n",
+       "3  40.762186 -73.969382\n",
+       "4  40.764915 -73.959550"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 281,
    "id": "64f2cb60-e225-4fff-987a-416c56ff74d1",
    "metadata": {},
    "outputs": [
@@ -869,7 +870,7 @@
        "4  40.714812  -74.016153"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,6 +881,16 @@
     "hotels_df = JSON_to_DF(hotels_JSON, desired_feats)\n",
     "print(hotels_df.shape)\n",
     "hotels_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "id": "cb08d70b-3d5f-423d-af7d-244d060bec00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hotels_df = hotels_df.apply(pd.to_numeric, errors='coerce')"
    ]
   },
   {
@@ -1143,16 +1154,151 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 306,
+   "id": "305bc97c-ffc1-4874-b7d2-a3cabd776faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "factype       object\n",
+       "latitude     float64\n",
+       "longitude    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#replace object lat_long with floata\n",
+    "facility_all[['latitude', 'longitude']] = facility_all[['latitude', 'longitude']].apply(pd.to_numeric, errors='coerce')\n",
+    "facility_all.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7a1f62-4505-4ab8-93e9-026468632b26",
+   "metadata": {},
+   "source": [
+    "### Binning work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "257c0f4d-4d11-488a-9fac-b30913f88c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.768352</td>\n",
+       "      <td>-73.809546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40.763352</td>\n",
+       "      <td>-73.868396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40.734894</td>\n",
+       "      <td>-73.783716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.755734</td>\n",
+       "      <td>-73.983503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40.818055</td>\n",
+       "      <td>-73.856188</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    latitude  longitude\n",
+       "0  40.768352 -73.809546\n",
+       "1  40.763352 -73.868396\n",
+       "2  40.734894 -73.783716\n",
+       "3  40.755734 -73.983503\n",
+       "4  40.818055 -73.856188"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get NTA centroid list\n",
+    "NTA = pd.read_csv('../Mid-term/Mid-Term-Project/processed_data/geocoded_population.csv').loc[:, ['latitude', 'longitude']]\n",
+    "NTA.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "9c3f1197-0a99-4a12-9f23-a3e6985e925f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bin_test(dataframe):\n",
+    "    \n",
+    "    for i in range(dataframe.shape[0]):\n",
+    "        df_lat, df_long = dataframe.latitude[i], dataframe.longitude[i]\n",
+    "    \n",
+    "        difference = []\n",
+    "        \n",
+    "        for lat, long in NTA.values:\n",
+    "            print(abs(df_lat - lat))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e11c8d32-5e50-4db2-971b-86b0f07a62fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### To csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 310,
    "id": "dfe1478a-e577-4e1f-9eea-0334ac956a6a",
    "metadata": {},
    "outputs": [],
