Preliminary map and csv fixes
added all current features to map
fixed geocoded_population and facilities csvs

--- a/notebooks/population.ipynb
+++ b/notebooks/population.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5f508823-cc09-4f59-b9a5-c6d1e05cd142",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d9514ec5-6df5-4727-955e-9572fb329ed4",
    "metadata": {},
    "outputs": [
@@ -39,13 +39,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5104/2647752938.py:5: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/tmp/ipykernel_38241/619830744.py:5: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  poly.centroid\n",
-      "/tmp/ipykernel_5104/2647752938.py:6: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/tmp/ipykernel_38241/619830744.py:6: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  poly[\"latitude\"] = poly.centroid.x\n",
-      "/tmp/ipykernel_5104/2647752938.py:7: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/tmp/ipykernel_38241/619830744.py:7: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  poly[\"longitude\"] = poly.centroid.y\n"
      ]
@@ -60,12 +60,12 @@
     "poly[\"latitude\"] = poly.centroid.x\n",
     "poly[\"longitude\"] = poly.centroid.y\n",
     "\n",
-    "NTAs = poly.drop(['boro_code', 'boro_name', 'county_fip', 'shape_area', 'shape_leng', 'geometry'], axis=1)"
+    "NTAs = poly.drop(['boro_code', 'boro_name', 'county_fip', 'shape_area', 'shape_leng', 'geometry', 'ntaname'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c2d7d950-43ec-48dc-8973-c9c5ff4509a8",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b0a25628-838a-4c85-91e8-704cf28e727c",
    "metadata": {},
    "outputs": [],
