--- a/notebooks/facilities.ipynb
+++ b/notebooks/facilities.ipynb
@@ -786,6 +786,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 400,
+   "id": "e226ba36-a5ad-4b68-aa35-c04cafd86f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parks_df['acres'] = parks_df['acres'].apply(pd.to_numeric, errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "id": "d52b91f5-dfd6-43cb-8627-2fb187cfa4e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "acres             float64\n",
+       "latitude          float64\n",
+       "longitude         float64\n",
+       "close_NTA_lat     float64\n",
+       "close_NTA_long    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parks_df.dtypes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "874834e4-3fd8-4748-9633-fe84e990369f",
    "metadata": {},
@@ -1189,10 +1225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 369,
    "id": "257c0f4d-4d11-488a-9fac-b30913f88c3f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(195, 2)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1257,7 +1300,7 @@
        "4  40.818055 -73.856188"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,25 +1308,314 @@
    "source": [
     "#get NTA centroid list\n",
     "NTA = pd.read_csv('../Mid-term/Mid-Term-Project/processed_data/geocoded_population.csv').loc[:, ['latitude', 'longitude']]\n",
+    "print(NTA.shape)\n",
     "NTA.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 445,
    "id": "9c3f1197-0a99-4a12-9f23-a3e6985e925f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bin_test(dataframe):\n",
+    "def bin_test(dataframe, grouping = None):\n",
+    "    #create empty list for closest NTA centroids\n",
+    "    close_NTA_lat = []\n",
+    "    close_NTA_long = []\n",
     "    \n",
+    "    #for every row\n",
     "    for i in range(dataframe.shape[0]):\n",
+    "        #save lat, long\n",
     "        df_lat, df_long = dataframe.latitude[i], dataframe.longitude[i]\n",
     "    \n",
+    "        #create empty list to save difference b/w datapoint and NTA\n",
     "        difference = []\n",
-    "        \n",
+    "        #for every NTA centroid, append total difference\n",
     "        for lat, long in NTA.values:\n",
-    "            print(abs(df_lat - lat))"
+    "            difference.append(abs(df_lat - lat) + abs(df_long - long))\n",
+    "        \n",
+    "        #save lat, long of closest NTA by getting the index of the minimum difference value\n",
+    "        close_NTA_lat.append(NTA.loc[difference.index(min(difference)), 'latitude'])\n",
+    "        close_NTA_long.append(NTA.loc[difference.index(min(difference)), 'longitude'])\n",
+    "        \n",
+    "    #save a new column to inputted dataframe with closest NTA centroid       \n",
+    "    dataframe['close_NTA_lat'] = close_NTA_lat\n",
+    "    dataframe['close_NTA_long'] = close_NTA_long\n",
+    "    \n",
+    "    #return data frame grouped depeding on input\n",
+    "    if grouping == 'count':\n",
+    "        grouped = dataframe.value_counts(['close_NTA_lat', 'close_NTA_long']).rename_axis(['NTA_lat', 'NTA_long']).reset_index(name='count')\n",
+    "        grouped_df = pd.DataFrame(grouped)\n",
+    "    elif grouping == 'sum':\n",
+    "        grouped = dataframe.groupby(['close_NTA_lat', 'close_NTA_long']).sum().drop(['latitude', 'longitude'], axis=1)\n",
+    "        grouped_df = pd.DataFrame(grouped).rename_axis(['NTA_lat', 'NTA_long']).reset_index()\n",
+    "    #if none is specified \n",
+    "    else:\n",
+    "        return dataframe\n",
+    "    \n",
+    "    return grouped_df\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 443,
+   "id": "081682db-3edb-4a4b-89f0-1b66ad88c8d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NTA_lat</th>\n",
+       "      <th>NTA_long</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.757560</td>\n",
+       "      <td>-73.938750</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40.755734</td>\n",
+       "      <td>-73.983503</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40.715607</td>\n",
+       "      <td>-73.994630</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.594060</td>\n",
+       "      <td>-73.789621</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40.754313</td>\n",
+       "      <td>-73.969018</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>40.688731</td>\n",
+       "      <td>-73.855764</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>40.688168</td>\n",
+       "      <td>-73.931888</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>40.678953</td>\n",
+       "      <td>-73.790987</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>40.677642</td>\n",
+       "      <td>-73.967586</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>40.899535</td>\n",
+       "      <td>-73.906985</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>165 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       NTA_lat   NTA_long  count\n",
+       "0    40.757560 -73.938750      4\n",
+       "1    40.755734 -73.983503      4\n",
+       "2    40.715607 -73.994630      3\n",
+       "3    40.594060 -73.789621      3\n",
+       "4    40.754313 -73.969018      3\n",
+       "..         ...        ...    ...\n",
+       "160  40.688731 -73.855764      1\n",
+       "161  40.688168 -73.931888      1\n",
+       "162  40.678953 -73.790987      1\n",
+       "163  40.677642 -73.967586      1\n",
+       "164  40.899535 -73.906985      1\n",
+       "\n",
+       "[165 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 443,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin_test(library_df, 'count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "id": "d577168d-0fab-476a-ae65-1b65478ddcb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NTA_lat</th>\n",
+       "      <th>NTA_long</th>\n",
+       "      <th>acres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.525528</td>\n",
+       "      <td>-74.233554</td>\n",
+       "      <td>443.237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40.528645</td>\n",
+       "      <td>-74.187734</td>\n",
+       "      <td>697.744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40.540334</td>\n",
+       "      <td>-74.207828</td>\n",
+       "      <td>315.840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.545779</td>\n",
+       "      <td>-74.128351</td>\n",
+       "      <td>24.137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40.551860</td>\n",
+       "      <td>-74.150890</td>\n",
+       "      <td>419.592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>40.880937</td>\n",
+       "      <td>-73.836641</td>\n",
+       "      <td>50.192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>40.882156</td>\n",
+       "      <td>-73.858949</td>\n",
+       "      <td>211.042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>40.882406</td>\n",
+       "      <td>-73.910667</td>\n",
+       "      <td>185.228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>40.897931</td>\n",
+       "      <td>-73.852216</td>\n",
+       "      <td>1.224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>40.899535</td>\n",
+       "      <td>-73.906985</td>\n",
+       "      <td>1227.747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>194 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       NTA_lat   NTA_long     acres\n",
+       "0    40.525528 -74.233554   443.237\n",
+       "1    40.528645 -74.187734   697.744\n",
+       "2    40.540334 -74.207828   315.840\n",
+       "3    40.545779 -74.128351    24.137\n",
+       "4    40.551860 -74.150890   419.592\n",
+       "..         ...        ...       ...\n",
+       "189  40.880937 -73.836641    50.192\n",
+       "190  40.882156 -73.858949   211.042\n",
+       "191  40.882406 -73.910667   185.228\n",
+       "192  40.897931 -73.852216     1.224\n",
+       "193  40.899535 -73.906985  1227.747\n",
+       "\n",
+       "[194 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 446,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin_test(parks_df, 'sum')"
    ]
   },
   {
@@ -1298,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 447,
    "id": "dfe1478a-e577-4e1f-9eea-0334ac956a6a",
    "metadata": {},
    "outputs": [],
