--- a/notebooks/population.ipynb
+++ b/notebooks/population.ipynb
@@ -39,13 +39,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_38241/619830744.py:5: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/tmp/ipykernel_59209/619830744.py:5: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  poly.centroid\n",
-      "/tmp/ipykernel_38241/619830744.py:6: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/tmp/ipykernel_59209/619830744.py:6: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  poly[\"latitude\"] = poly.centroid.x\n",
-      "/tmp/ipykernel_38241/619830744.py:7: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/tmp/ipykernel_59209/619830744.py:7: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  poly[\"longitude\"] = poly.centroid.y\n"
      ]
@@ -65,13 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c2d7d950-43ec-48dc-8973-c9c5ff4509a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "population = NTAs.set_index('ntacode').join(df_2010.set_index('ntacode'))\n",
-    "geocoded_population = population.reset_index()"
+    "geocoded_population = population.reset_index()\n",
+    "geocoded_population = geocoded_population.drop(['ntacode'], axis=1)"
    ]
   },
   {
