--- a/notebooks/facilities.ipynb
+++ b/notebooks/facilities.ipynb
@@ -1347,7 +1347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmaps = googlemaps.Client(key='AIzaSyAhYwz9qy9CZorpHXe9nCNqvFTL3prHTIY')"
+    "gmaps = googlemaps.Client(key=os.environ['GOOGLE_TEMP'])"
    ]
   },
   {
